@startuml

interface Answer {
    chatId: Long
    disableNotification: Option[Boolean]
    replyToMessageId: Option[Long]
    replyMarkup: Option[KeyboardMarkup]
}

interface TextAnswer {
    text: String
    disableWebPagePreview: Option[Boolean]
}

class FlatAnswer {
  chatId: Long
  text: String
  replyMarkup: Option[KeyboardMarkup]
  disableWebPagePreview: Option[Boolean]
  disableNotification: Option[Boolean]
  replyToMessageId: Option[Long]
}

class MarkdownAnswer {
  chatId: Long,
  text: String,
  replyMarkup: Option[KeyboardMarkup]
  disableWebPagePreview: Option[Boolean]
  disableNotification: Option[Boolean]
  replyToMessageId: Option[Long]  
}

class HtmlAnswer {
  chatId: Long
  text: String
  replyMarkup: Option[KeyboardMarkup]
  disableWebPagePreview: Option[Boolean]
  disableNotification: Option[Boolean]
  replyToMessageId: Option[Long]
}

class PhotoAnswer {
  chatId: Long
  photo: String
  caption: Option[String]
  replyMarkup: Option[KeyboardMarkup]
  disableNotification: Option[Boolean]
  replyToMessageId: Option[Long] = None
}

class StickerAnswer {
  chatId: Long
  sticker: String
  replyMarkup: Option[KeyboardMarkup]
  disableNotification: Option[Boolean]
  replyToMessageId: Option[Long] = None
}

TextAnswer -left-|> Answer
FlatAnswer -up-|> TextAnswer
MarkdownAnswer -up-|> TextAnswer
HtmlAnswer -up-|> TextAnswer
PhotoAnswer -up-|> Answer
StickerAnswer -up-|> Answer

@enduml